# VaniAI

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  dvc.yaml  params.yaml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: __init__.py  config.py  database.py  exceptions.py  logging_conf.py  metrics.py  security.py
backend/app/models/: __init__.py  common.py  ml.py  prediction.py  report.py  student.py  user.py
backend/app/repositories/: __init__.py  base.py  dataset_repository.py  model_repository.py  monitoring_repository.py  prediction_repository.py  report_repository.py  resume_repository.py  student_repository.py  user_repository.py
backend/app/schemas/: __init__.py  admin.py  analytics.py  auth.py  common.py  faculty.py  monitoring.py  placement.py  prediction.py  student.py
backend/app/services/: analytics_service.py  auth_service.py  dataset_service.py  faculty_service.py  monitoring_service.py  prediction_service.py  recommendation_service.py  report_service.py  resume_service.py  student_service.py  training_service.py
backend/app/utils/: pagination.py  prediction_serialization.py
backend/ml/: __init__.py  config.py
backend/ml/data/: __init__.py  cleaning.py  generate_dataset.py  validation.py
backend/scripts/: __init__.py  seed.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_ml.py  test_predictions.py  test_students.py
(+129 files in other folders)
